--- a/alcs-frontend/src/app/features/application/decision/decision.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision.component.scss
@@ -101,3 +101,15 @@ section {
   background-color: $grey-light;
   height: 72px;
 }
+
+
+.no-files {
+  grid-column: 1/4;
+  margin-top: 16px;
+  padding: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-color: $grey-light;
+}
