--- a/alcs-frontend/src/app/features/home/assigned/assigned.component.html
+++ b/alcs-frontend/src/app/features/home/assigned/assigned.component.html
@@ -5,7 +5,7 @@
       <td style="padding: 4px"></td>
       <td class="header">Application</td>
       <td class="header">Active Days</td>
-      <td class="header">Status</td>
+      <td class="header">Workflow Stage</td>
     </thead>
     <tbody class="assigned-body">
       <tr
