--- a/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.html
+++ b/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.html
@@ -5,7 +5,7 @@
       <th></th>
       <th class="header">Application</th>
       <th class="header">Active Days</th>
-      <th class="header">Status</th>
+      <th class="header">Workflow Stage</th>
       <th class="header">Assignee</th>
       <th class="header action-column">Action</th>
     </thead>
