--- a/alcs-frontend/src/app/features/application/post-decision/post-decision.component.scss
+++ b/alcs-frontend/src/app/features/application/post-decision/post-decision.component.scss
@@ -3,7 +3,7 @@
 .post-decision-header {
   margin: 24px 0 !important;
   .icon {
-    margin-right: 4px;
+    margin-left: 2px;
     height: 20px;
     width: 20px;
     font-size: 20px;
@@ -25,4 +25,69 @@
   justify-content: center;
   background-color: $grey-light;
   height: 72px;
+}
+
+h3 {
+  margin-bottom: 24px !important;
+}
+
+section {
+  margin-bottom: 64px;
+}
+
+.decision:last-child {
+  padding: 32px;
+}
+
+.recon-label {
+  font-size: 11px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 32px;
+  padding: 6px 12px;
+  color: $white;
+  background: $grey-dark;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 4px 0 10px;
+}
+
+.decision-menu {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 32px;
+  background: $accent-color;
+  box-shadow: -1px 1px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 0px 4px 0px 10px;
+
+  button {
+    color: $white;
+    width: 32px;
+    height: 32px;
+    line-height: 32px;
+  }
+
+  mat-icon {
+    font-size: 20px;
+    line-height: 32px;
+    width: 20px;
+    height: 32px;
+  }
+}
+
+.decision-content {
+  margin-top: 16px;
+  margin-bottom: 32px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 100px;
+  grid-row-gap: 24px;
+
+  .subheading2 {
+    margin-bottom: 6px !important;
+  }
+
+  & > div {
+    font-size: 16px;
+  }
 }
