Make more fields required on decisions
* Require Decision Maker
* Require CEO Criterion if Decision Maker is CEOP

--- a/alcs-frontend/src/app/features/application/decision/decision-dialog/decision-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-dialog/decision-dialog.component.html
@@ -38,8 +38,9 @@
         appendTo="body"
         bindLabel="label"
         bindValue="code"
-        placeholder="Decision Maker"
+        placeholder="Decision Maker *"
         (change)="onSelectDecisionMaker($event)"
+        [clearable]="false"
       ></ng-select>
       <ng-select
         *ngIf="form.get('decisionMaker')!.value === 'CEOP'"
@@ -50,7 +51,8 @@
         appendTo="body"
         bindLabel="label"
         bindValue="code"
-        placeholder="CEO Criterion"
+        placeholder="CEO Criterion *"
+        [clearable]="false"
       >
         <ng-template ng-option-tmp let-item="item">
           <span>{{ item.number }} - {{ item.label }} </span>
