Restrict Pages based on Roles
* Add new Roles to HasRolesGuard to check for specific roles
* Update API to now require specific roles for certain endpoints instead of any roles
* Hide Search bar is roles is not allowed to see applications

--- a/alcs-frontend/src/app/shared/header/header.component.html
+++ b/alcs-frontend/src/app/shared/header/header.component.html
@@ -36,7 +36,7 @@
         </mat-menu>
       </div>
       <div *ngIf="currentUserProfile" class="col right">
-        <app-search-bar></app-search-bar>
+        <app-search-bar *ngIf="allowedSearch"></app-search-bar>
         <app-notifications *ngIf="hasRoles"></app-notifications>
         <button
           [class.open]="menuTrigger.menuOpen"
