--- a/alcs-frontend/src/app/shared/meeting-overview/meeting-overview.component.html
+++ b/alcs-frontend/src/app/shared/meeting-overview/meeting-overview.component.html
@@ -131,7 +131,7 @@
       expandedHeight="48px"
       collapsedHeight="48px"
     >
-      <mat-panel-title class="split">
+      <mat-panel-title id="{{ application.fileNumber }}" class="split">
         <span>{{ application.fileNumber }} ({{ application.applicant }})</span>
         <app-avatar-circle
           *ngIf="application.assignee"
