fix meetings scrolling (#156)
* fix expanding
* add scroll

--- a/alcs-frontend/src/app/shared/meeting-overview/meeting-overview.component.html
+++ b/alcs-frontend/src/app/shared/meeting-overview/meeting-overview.component.html
@@ -95,6 +95,7 @@
         <mat-expansion-panel
           class="meeting-panel"
           hideToggle="true"
+          [(expanded)]="upcomingMeeting.isExpanded"
           *ngFor="let upcomingMeeting of boardMeeting.upcomingMeetings"
         >
           <mat-expansion-panel-header
@@ -130,7 +131,7 @@
       expandedHeight="48px"
       collapsedHeight="48px"
     >
-      <mat-panel-title class="split">
+      <mat-panel-title id="{{ application.fileNumber }}" class="split">
         <span>{{ application.fileNumber }} ({{ application.applicant }})</span>
         <app-avatar-circle
           *ngIf="application.assignee"
