--- a/alcs-frontend/src/app/features/home/assigned/assigned.component.html
+++ b/alcs-frontend/src/app/features/home/assigned/assigned.component.html
@@ -12,7 +12,7 @@
         [ngClass]="{
           paused: application.paused
         }"
-        (click)="onSelectCard(application.fileNumber, application.board, application.card.type)"
+        (click)="onSelectCard(application.fileNumber, application.card.board.code, application.card.type)"
         *ngFor="let application of applications"
       >
         <td class="center" style="padding: 4px">
@@ -20,7 +20,7 @@
         </td>
         <td>{{ application.fileNumber }} ({{ application.applicant }})</td>
         <td>{{ application.activeDays }}</td>
-        <td [innerHTML]="application.status"></td>
+        <td [innerHTML]="application.card.status.label"></td>
       </tr>
     </tbody>
   </table>
