--- a/alcs-frontend/src/app/shared/meeting-overview/meeting-overview.component.html
+++ b/alcs-frontend/src/app/shared/meeting-overview/meeting-overview.component.html
@@ -132,16 +132,35 @@
       collapsedHeight="48px"
     >
       <mat-panel-title id="{{ application.fileNumber }}" class="split">
-        <span>{{ application.fileNumber }} ({{ application.applicant }})</span>
-        <app-avatar-circle
-          *ngIf="application.assignee"
-          [initials]="application.assignee.initials"
-          [name]="application.assignee.name"
-        ></app-avatar-circle>
+        <div
+          class="ellipsis"
+          [id]="'title_' + application.fileNumber"
+          matTooltipClass="no-wrap-tooltip"
+          [matTooltip]="application.fileNumber + ' (' + application.applicant + ')'"
+          [matTooltipDisabled]="!isEllipsisActive('title_' + application.fileNumber)"
+        >
+          {{ application.fileNumber }} ({{ application.applicant }})
+        </div>
+        <div>
+          <app-avatar-circle
+            *ngIf="application.assignee"
+            [initials]="application.assignee.initials"
+            [name]="application.assignee.name"
+          ></app-avatar-circle>
+        </div>
       </mat-panel-title>
     </mat-expansion-panel-header>
-    <div class="application-file" *ngFor="let file of application.files">
-      <a (click)="onOpen(file.uuid, file.fileName)">{{ file.fileName }}</a>
+    <div class="application-file" *ngFor="let file of application.files, let i = index">
+      <a
+        [id]="i + '_file'"
+        class="ellipsis"
+        [matTooltip]="file.fileName"
+        [matTooltipDisabled]="!isEllipsisActive(i + '_file')"
+        matTooltipClass="no-wrap-tooltip"
+        (click)="onOpen(file.uuid, file.fileName)"
+        onKeyPress =
+        >{{ file.fileName }}</a
+      >
       <div>
         <button mat-icon-button title="Download" (click)="onDownload(file.uuid, file.fileName)">
           <mat-icon>download</mat-icon>
