--- a/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.html
+++ b/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.html
@@ -28,7 +28,7 @@
             [items]="gisUsers"
             bindLabel="name"
             bindValue="name"
-            [ngModel]="subtask.assignee"
+            [ngModel]="subtask.assignee?.name"
             [searchFn]="filterAssigneeList"
             (change)="onAssigneeSelected($event, subtask.uuid)"
           >
