--- a/alcs-frontend/src/app/shared/card/card.component.html
+++ b/alcs-frontend/src/app/shared/card/card.component.html
@@ -25,7 +25,7 @@
       </div>
       <app-avatar-circle
         *ngIf="cardData.assignee"
-        [initials]="cardData.assignee.initials"
+        [initials]="cardData.assignee?.initials || ''"
         [name]="cardData.assignee.name"
       ></app-avatar-circle>
     </div>
