--- a/alcs-frontend/src/app/shared/card/card.component.scss
+++ b/alcs-frontend/src/app/shared/card/card.component.scss
@@ -56,10 +56,10 @@
 }
 
 .type {
-  margin-top: 8px;
+  margin: 8px 8px 0 0;
   border-radius: 8px;
   width: fit-content;
-  display: flex;
+  display: inline-flex;
   flex-direction: row;
   align-items: center;
   padding: 8px;
