--- a/alcs-frontend/src/app/features/home/assigned/assigned.component.html
+++ b/alcs-frontend/src/app/features/home/assigned/assigned.component.html
@@ -12,7 +12,7 @@
         [ngClass]="{
           paused: application.paused
         }"
-        (click)="onSelectCard(application.fileNumber, application.card.board.code, application.card.type)"
+        (click)="onSelectCard(application.card)"
         *ngFor="let application of assignedToMe.applications"
       >
         <td class="center" style="padding: 4px">
@@ -23,16 +23,22 @@
         <td [innerHTML]="application.card.status.label"></td>
       </tr>
 
-      <tr
-        (click)="onSelectCard(reconsideration.card.uuid, reconsideration.card.board.code, reconsideration.card.type)"
-        *ngFor="let reconsideration of assignedToMe.reconsiderations"
-      >
+      <tr (click)="onSelectCard(reconsideration.card)" *ngFor="let reconsideration of assignedToMe.reconsiderations">
         <td class="center" style="padding: 4px">
           <span class="high-priority" *ngIf="reconsideration.card.highPriority">!</span>
         </td>
         <td>{{ reconsideration.application.fileNumber }} ({{ reconsideration.application.applicant }})</td>
         <td>-</td>
         <td [innerHTML]="reconsideration.card.status.label"></td>
+      </tr>
+
+      <tr (click)="onSelectCard(planningReview.card)" *ngFor="let planningReview of assignedToMe.planningReviews">
+        <td class="center" style="padding: 4px">
+          <span class="high-priority" *ngIf="planningReview.card.highPriority">!</span>
+        </td>
+        <td>{{ planningReview.fileNumber }} ({{ planningReview.type }})</td>
+        <td>-</td>
+        <td [innerHTML]="planningReview.card.status.label"></td>
       </tr>
     </tbody>
   </table>
