Update CEO Boards Status
* Also fix clicking on cards not working

--- a/alcs-frontend/src/app/shared/drag-drop-board/drag-drop-board.component.html
+++ b/alcs-frontend/src/app/shared/drag-drop-board/drag-drop-board.component.html
@@ -11,7 +11,7 @@
         [id]="'card-' + card.id"
         *ngFor="let card of cards | statusfilter: column.status"
         [cardData]="card"
-        (cardSelected)="cardClicked($event)"
+        (cardSelected)="cardClicked(card)"
       >
       </app-card>
     </div>
