--- a/alcs-frontend/src/app/features/board/subtasks/subtasks.component.html
+++ b/alcs-frontend/src/app/features/board/subtasks/subtasks.component.html
@@ -30,7 +30,7 @@
           class="type badge"
           [ngStyle]="{ backgroundColor: subtask.type.backgroundColor, color: subtask.type.textColor }"
         >
-          {{ subtask.type }}
+          {{ subtask.type.type }}
         </div>
       </div>
       <div class="center"></div>
