Add confirmation toasts to delete actions where missing

--- a/alcs-frontend/src/app/features/application/decision/decision.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision.component.html
@@ -86,7 +86,7 @@
           matTooltip="Delete File"
           class="delete-file-icon"
           mat-icon-button
-          (click)="deleteFile(decision.uuid, document.uuid)"
+          (click)="deleteFile(decision.uuid, document.uuid, document.fileName)"
         >
           <mat-icon>delete</mat-icon>
         </button>
