--- a/alcs-frontend/src/app/features/home/assigned/assigned.component.html
+++ b/alcs-frontend/src/app/features/home/assigned/assigned.component.html
@@ -40,6 +40,16 @@
         <td>-</td>
         <td [innerHTML]="planningReview.card.status.label"></td>
       </tr>
+      <tr
+        class="no-assigned-to-me"
+        *ngIf="
+          assignedToMe.applications.length === 0 &&
+          assignedToMe.reconsiderations.length === 0 &&
+          assignedToMe.planningReviews.length === 0
+        "
+      >
+        <td class="text-center" colspan="4">No data</td>
+      </tr>
     </tbody>
   </table>
 </div>
