--- a/alcs-frontend/src/app/features/home/assigned/assigned.component.scss
+++ b/alcs-frontend/src/app/features/home/assigned/assigned.component.scss
@@ -30,7 +30,7 @@
     cursor: pointer;
   }
 
-  tr.no-assigned-to-me {
+  tr.no-data {
     border: none;
     background-color: $grey-light;
     align-items: center;
