--- a/alcs-frontend/src/app/features/home/assigned/assigned.component.html
+++ b/alcs-frontend/src/app/features/home/assigned/assigned.component.html
@@ -48,7 +48,7 @@
           assignedToMe.planningReviews.length === 0
         "
       >
-        <td class="text-center" colspan="4">No data</td>
+        <td class="text-center" colspan="4">No applications assigned</td>
       </tr>
     </tbody>
   </table>
