--- a/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.html
+++ b/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.html
@@ -48,7 +48,7 @@
       </tr>
     </tbody>
     <tr class="no-data" *ngIf="subtasks.length === 0">
-      <td class="text-center" colspan="7">No data</td>
+      <td class="text-center" colspan="7">No GIS subtasks</td>
     </tr>
   </table>
 </div>
